--- a/styles/style.css
+++ b/styles/style.css
@@ -7,25 +7,24 @@ body{
     font-size: 16px;
     line-height: 1.5;
     color: #252222;
-    /* margin-top: 70px; */
-    /* display: flex;
+    margin-top: 70px;
+    display: flex;
     flex-direction: row;
     justify-content:space-between;
-    flex-wrap: wrap; */
+    flex-wrap: wrap;
     margin: 10px;
-
-    
+    box-sizing: border-box;
+   
 } 
-
-    /* .container{
+   .container{
     display: flex;
     flex-direction: row;
     justify-content:center;
     flex-wrap: wrap;
-    } 
+    }  
 
-
-    .header {
+     
+  .header {
         background-repeat: no-repeat;
         background-position: cener;
         background-size: cover;
@@ -38,110 +37,37 @@ body{
         display: flex;
         flex-direction: row;
         justify-content:space-around;
-        
-       
+      
+    }
+     
+    .logo{
+        float: left;
 
     }
 
-    .row{
+    ul{
+        float: right;
+        overflow: hidden;
+        display: flex;
+        flex-direction:row;
+        list-style: none;
+        font-family: 'Libre Baskerville' serif rgb(253, 252, 252); 
+    }
+
+    
+    .content{
         display: flex; 
         flex-direction: row;
         justify-content:space-around;
-    }
+        padding: 5px 10 px;
+       }
 
-    .headerTitle{
-        font-size: 14px;
-        line-height: 30px;
-        margin-bottom: 10px;
-        float: left;
-
-        display: flex;
-        flex-grow: 1;
-        flex-shrink: 1;
-    
-        font-family: 'Libre Baskerville', serif; 
-    }
-
-    .content{
-        margin-left: auto;
-        margin-right: auto;
-        
-    }
-
-    .content-title{
-        width: 200px;
-        height: 300px;
-        background-repeat: no-repeat;
-        background-position: cener;
-        background-size: cover;  
-        float: left;
-
-        color: #FFF;
-        font-family: 'Libre Baskerville', serif; 
-
-        display: flex;
-        flex-direction: row;
-        justify-content:flex-end;
-        align-self: center;
-
-      
-    }
-
-    .content-text{
-        color: #FFF;
-        font-family: 'Libre Baskerville', serif;  
-
-        align-self: center;
-        float: left;
-    }
-
-    .content-work{
-        width:370px;
-        height: 300px;
-        margin-left: 230px;
-        border: 1px solid black;
-        float: left;
-
-    }
-
-    .footer{
-        width: 600px;
-        height: 130px;
-        color: rgb(221, 12, 12);
-        font-family: 'Libre Baskerville', serif; 
-        float: left; 
-    } */
-
-
-    nav . logo{
-        
-    }
-    nav . logo .ltitle{
+    .logo .ltitle{
         font-size: 30px;
         font-family: 'Libre Baskerville', serif;
        
     }
-
-    nav .menu a{
-        padding: 5px 10 px;
-        font-family: 'Libre Baskerville', serif;
-       
-    }
-
-    nav .wrap{
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap; 
-    }
-
-    nav .logo{
-        flex: 1 1 auto;
-        padding: 5px 10 px;
-    }
-    nav menu a{
-        color: white;
-    }
-    nav menu{
+    #ul li a {
         list-style: none;
         color: white;
         display: flex;
@@ -151,25 +77,16 @@ body{
         padding: 5px 0;
     }
 
-    /* nav menu :nth-child(0) {
-        flex: start;
+    .menu a{
+        padding: 5px 10 px;
+        font-family: 'Libre Baskerville', serif;
+       
     }
 
-    nav menu :nth-child(1){
-        flex: end;
-    }
+    
+   
 
-    nav menu :nth-child(2){
-        flex: end;
-    }
-    nav menu :nth-child(3){
-        flex: end;
-    }
-    nav menu :nth-child(4){
-        flex: end;
-    } */
-
-.content div {
+.content {
     padding: 10px;
     border: 1px solid rgb(245, 1, 1);
     display: flex; 
@@ -181,18 +98,9 @@ body{
 .box-1{
     width: 90%;
     margin: 20px auto;
-    /* flex: 1; */
-    /* width: 30%; */
     color: rgb(238, 155, 155);
 }
  
-
-/* .box-2{
-    flex: 1;
-    width: 60%; */
-
-}
-
 .footer div{
     display: flex;
     flex-direction: row;
@@ -225,6 +133,3 @@ body{
     margin: 2% 2% 30px 2%;
 }
 
-.conteiner1 ul li a img{
-    max-width: 100%;
-}
