--- a/styles/PortraitStyle.css
+++ b/styles/PortraitStyle.css
@@ -3,9 +3,9 @@ body{
     padding: 0; 
     height: 100%;
     min-height: 100%;
-    
+    /* background-image: url("../pic/bg r.jpg"); */
     font-family: 'Libre Baskerville', serif;  
-    background: rgb(30, 36, 46);  
+    background: rgb(30, 36, 46);   
 }
 /* шапка */
 .header{
