--- a/styles/NSstyle.css
+++ b/styles/NSstyle.css
@@ -1,4 +1,4 @@
-/* СТАРТОВАЯ СТР */
+/* Ð¡Ð¢ÐÐ Ð¢ÐžÐ’ÐÐ¯ Ð¡Ð¢Ð  */
 
 body{
     margin: 0;
@@ -80,7 +80,7 @@ body{
     font-size: 14px;
     text-transform: uppercase;
     text-decoration: none;
-
+    padding: 10px;
 }
 :hover{
     color: rgb(0, 217, 255);
@@ -111,7 +111,8 @@ body{
     width: 25px;
     height: 25px;
     display: inline-block;
-   
+    margin: 10px;
+    filter: brightness(1000);
 }
 .tw{
    background: url("../icons/twitter-social-outlined-logo.PNG") no-repeat; 
