--- a/styles/G_Style.css
+++ b/styles/G_Style.css
@@ -129,24 +129,42 @@ body{
 
 /* ДЕЛАЕМ ЗАКАЗ  */
 
-.dwsF-wrapper{
+ /* .dwsF-wrapper{
     position: absolute;
     top: 50%;
     left: 50%; 
-    transform: translate (-50%, -50%)  
-}
+    transform: translate (-50%, -50%)   
+}  */
 .dwsF-container{
+    position: fixed;
+    bottom: 0;
+    right: 10%;
     width: 350px;
     overflow: hidden;
+    transform: translateY(500px);
+    transition: .5s;
 }
+.dwsF-container:hover{
+    transform: translateY(500px);
+  
+}
+
+.toggleForm:checked ~ .dwsF-container{
+    transform: translateY(0); 
+}
+.toggleForm[type="checkbox"]{
+    display: none;
+}
+
 .formBox{
     padding: 30px;
-    border: 4px solid black;
+    border: 4px solid rgb(6, 164, 175);
     background: white;
 }
-.dwsF-container{
-    background: rgb(3, 160, 172);
-    color: rgb(3, 3, 56);
+.toggleForm {
+    display: block;
+    background: rgb(4, 198, 212);
+    color: rgb(250, 250, 250);
     text-align: center;
     margin:0 auto;
     font-size: 24px;
@@ -155,10 +173,20 @@ body{
     width: 85%;
     cursor: pointer;   
 }
+/* для иконки */
+h3 png{
+    position: absolute;
+    top: 20px;
+    left: 40px;
+    font-size: 40px;
+
+}
+
 .inputBox{
     /* outline: 1px solid rgb(98, 139, 8); */
-    position: relative;
+     position: relative; 
     margin: 0 0 20px;
+    /* есть вопрос */
 }
 .labelText{
     position: absolute;
@@ -170,6 +198,7 @@ body{
 .userInput{
     position: relative;
     background: transparent;
+    /* -прозрачность */
     width: 100%;
     height: 50px;
     font-size: 20px;
@@ -181,5 +210,33 @@ body{
 .focus .labelText{
     transform: translateY(-30px);
     font-size: 14px;
-    color: red; 
+    color: rgb(4, 242, 250); 
+}
+textarea .userInput{
+    height: 100px;
+    margin-top: 12px;
+}
+.personalDoc
+.personalDoc a{
+color: grey;
+}
+.personalDoc a:hover{
+    text-decoration: none;
+   
+    color: rgb(8, 98, 121);
+}
+.button{
+    background: rgb(5, 164, 179);
+    color: white;
+    width: 45%;
+    height: 35px;
+    font-size: 18px;
+    border: none;
+    margin-top: 10px;
+    margin-left: 50%;
+    cursor: pointer; 
+    transition: .5s; 
+}
+.button:hover{
+    background: rgb(19, 232, 252); 
 }
