--- a/styles/G_Style.css
+++ b/styles/G_Style.css
@@ -6,6 +6,77 @@ body{
 
 }
 
+/* шапка */
+
+.header{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center; 
+    align-self: flex-start;
+    justify-content: space-between; 
+    flex-basis: 100%; 
+
+    /* max-width: 58%;  */
+}
+.logo{
+    display: block;
+    width: 140px;
+    height: 50px;
+    background: rgb(64, 84, 97) no-repeat; 
+    border-radius: 10px;
+    text-transform: uppercase;
+    text-align: center;
+    text-decoration: none;
+    font-family:'Libre Baskerville', serif;
+    font-size: 20px;
+    padding: 15px;
+    
+}
+
+.nav{
+   
+}
+.spesial{
+    list-style: none;
+    margin: 0;
+    padding: 0; 
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center; 
+    margin-top: 10px;
+}
+.menu_item{
+    margin-left: 35px;
+
+}
+.a{
+    color: rgb(59, 58, 58);
+    font-family:'Libre Baskerville', serif;
+    font-size: 14px;
+    text-transform: uppercase;
+    text-decoration: none;
+
+}
+:hover{
+    color: rgb(0, 217, 255);
+}
+.social a{
+    width: 25px;
+    height: 25px;
+    display: inline-block;
+   
+}
+.tw{
+   background: url("../icons/twitter-social-outlined-logo.PNG") no-repeat; 
+   background-position: 100% 0;
+   margin-left: 2px;
+}
+.fb{
+    background: url("../icons/facebook-logo-outline.PNG") no-repeat;
+    background-position: 0 0;
+    margin-left: 2px;
+}
+
 .dws-wrapper{
   /* position: absolute;
     top: 50%;
@@ -69,13 +140,6 @@ body{
 
 }
 
-.imageBox h3 {
-    top: 45%;
- }
- .imageBox p {
-    top: 58%;   
- }
-
  .imageBox h3:hover p:hover{
     -webkit-transform: translateX(0);
     -moz-transform: translateX(0);
@@ -106,13 +170,6 @@ body{
     display: block;
     padding: 10px;
 
-}
-/* .social{
-    width: 24px;
-    height: 24px;
-    display: inline-block;
-    background-image: url(../icons/facebook-logo-outline.PNG);
-    background-position: 100% 0; */
 }
 .imageBox ul{
     -webkit-transform: translateY(-135%);
@@ -239,4 +296,22 @@ color: grey;
 }
 .button:hover{
     background: rgb(19, 232, 252); 
+}
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0px;
+}
+
+.overlay:hover + .textCont {
+    left: 0px;
+}
+
+.textCont {
+    width: 100%;
+    position: absolute;
+    left: -100%;
+    top: 100px;
 }
