--- a/styles/G2_Style.css
+++ b/styles/G2_Style.css
@@ -4,185 +4,66 @@ body {
     font-family: Verdana, Geneva, sans-serif;
    }
    
-   .dws-wrapper {
-    margin-top: 100px;
-   }
-   .flex-container {
+   
+   .header {
+    background-repeat: no-repeat;
+    background-position: cener;
+    background-size: cover;
+    margin-left: 5%;
+    margin-right: 5%;
+    height: 80px;
+    color: #FFF;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-items:center;
+    /* margin: 20px; */
+}
+a {
+    color: white;
+    text-decoration: none;
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
+}
+a:hover{
+        color: rgb(0, 217, 255)
+    }
+
+
+.menu {
+    margin-left: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+ul {
+    display: flex;
+}
+li.menu_item {
+    margin-left: 20px;
+    white-space: nowrap;
+    text-decoration: none;
+    list-style: none;
+}
+
+   .text {
+    margin-top: 20%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-   }
-   .imageBox {
-    overflow: hidden;
-    height: 270px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    position: relative;
-    margin: 5px;
-   }
-   
-   .imageBox img {
-    min-width: 100%;
-    height: 100%;
-    -webkit-transition: .5s;
-    -moz-transition: .5s;
-    -ms-transition: .5s;
-    -o-transition: .5s;
-    transition: .5s;
-   }
-   .imageBox:hover img {
-    -webkit-transform: scale(1.2) rotate(-10deg);
-    -moz-transform: scale(1.2) rotate(-10deg);
-    -ms-transform: scale(1.2) rotate(-10deg);
-    -o-transform: scale(1.2) rotate(-10deg);
-    transform: scale(1.2) rotate(-10deg);
-    filter: grayscale(.75);
-   }
-   .imageBox h3,
-   .imageBox p {
-    position: absolute;
-    -webkit-transition: .8s;
-    -moz-transition: .8s;
-    -ms-transition: .8s;
-    -o-transition: .8s;
-    transition: .8s;
-    color: #ffffff;
-    background-color: rgba(0, 0, 0, 0.45);
-    padding: 5px 15px;
-    margin: 0;
-    border-left: 2px solid #c4c4c4;
-    -webkit-transform: translateX(-100%);
-    -moz-transform: translateX(-100%);
-    -ms-transform: translateX(-100%);
-    -o-transform: translateX(-100%);
-    transform: translateX(-100%);
-   }
-   .imageBox h3 {
-    top: 45%;
-    font-size: 1.1rem;
-   }
-   .imageBox p {
-    top: 58%;
-    font-size: 0.9rem;
-   }
-   .imageBox:hover h3,
-   .imageBox:hover p {
-    -webkit-transform: translateX(0);
-    -moz-transform: translateX(0);
-    -ms-transform: translateX(0);
-    -o-transform: translateX(0);
-    transform: translateX(0);
-    margin-left: 10px;
-   }
-   .imageBox ul {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    background: rgba(0,0,0, 0.2);
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -ms-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-   }
-   .imageBox ul li {
-    list-style: none;
-    width: 20%;
-    text-align: center;
-   }
-   .imageBox ul li a {
-    color: #ffffff;
-    display: block;
-    padding: 10px;
-   }
-   .imageBox ul li:hover:nth-child(1) {
-    background: #3d5999;
-   }
-   .imageBox ul li:hover:nth-child(2) {
-    background: #55acee;
-   }
-   .imageBox ul li:hover:nth-child(3) {
-    background: #dd4d39;
-   }
-   
-  
-   .imageBox:hover ul {
-    -webkit-transform: translateY(-135%);
-    -moz-transform: translateY(-135%);
-    -ms-transform: translateY(-135%);
-    -o-transform: translateY(-135%);
-    transform: translateY(-135%);
-   }
-   
-   /*==== MEDIA ====*/
-   .dws-wrapper {
-    margin-top: 50px;
-   }
-   
-   /* Extra Small Devices, Phones */
-   @media only screen and (max-width: 480px) {
-    .dws-wrapper {
-     margin-top: 20px;
-    }
-    .imageBox {
-     height: 370px;
-    }
-    .imageBox h3 {
-     font-size: 1.4rem;
-     top: 47%;
-    }
-    .imageBox p {
-     font-size: 1rem;
-    }
-    .imageBox ul li a {
-     font-size: 22px;
-    }
-   }
-   
-   /* Extra Small Devices, Phones */
-   @media only screen and (max-width: 320px) {
-    .imageBox {
-     height: 270px;
-    }
-    .imageBox h3 {
-     font-size: 1.1rem;
-     top: 45%;
-    }
-    .imageBox p {
-     font-size: 0.9rem;
-    }
-    .imageBox ul li a {
-     font-size: 16px;
-    }
+    color: #575454;
    }
 
-
-   .dws-wrapper2 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-   }
-   .dws-container {
-    position: fixed;
-    bottom: 0;
-    right: 10%;
-    width: 350px;
-    overflow: hidden;
-    transform: translateY(516px);
-    transition: .5s ease;
-   } 
-   .dws-container:hover {
-    transform: translateY(510px);
-   }    
    
    .formBox {
+       
     padding: 30px;
     border: 4px solid #8a36a5;
     background: #fff;
    }    
    .toggleForm {
+    
     display: block;
     background: #8a36a5;
     color: #ffffff;
@@ -256,4 +137,4 @@ body {
    }
    .button:hover {
     background: #b33edc;
-   }            
+   }         
